--- a/shop/templates/registration/signup.html
+++ b/shop/templates/registration/signup.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<form method="post" action="{% url 'signup' %}">
+<form method="post" action="{% url 'shop:signup' %}">
 {% csrf_token %}
 {{ form.as_p }}
 <button type="submit">회원가입</button>
