--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -6,6 +6,19 @@
 </head>
 <body>
 
+<header>
+
+    <a href=" {% url 'shop:home' %}">홈</a>
+    <a href=" {% url 'shop:info' %}">소개</a>
+    <a href=" {% url 'shop:products' %}">상품</a>
+    {% if user.is_active %}
+        <a href=" {% url 'shop:profile' %}">마이페이지</a>
+        <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a href="{% url 'login' %}"> <span class="glyphicon glyphicon-user"></span> Login</a>
+    {% endif %}
+</header>
+
 {% block content %}
 {% endblock %}
 
