--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -2,7 +2,126 @@
 
 
 {% block content %}
+{% load static %}
 
-THIS IS HOME
-
+<!-- banner -->
+<div id="banner_wrap">
+		<div id="banner">
+			<!-- 이미지 슬라이드 버튼 -->
+			<button id="btnR" class="btn" type="button" onclick="banner_click_right();"><img src="{% static 'shop/assets/buttonRight.png' %}"></button>
+			<button id="btnL" class="btn" type="button" onclick="banner_click_left();"><img src="{% static 'shop/assets/buttonLeft.png' %}"></button>
+		</div>
+	</div>
+	
+	<!-- 민속국악사 2018 추천상품 -->
+	<div id="m1_wrap">
+		<div id="m1">
+			<div id="m1_header">
+				<p class="boardMtit">민속국악사 2018 추천상품</p>
+				<p class="boardStit">2018년 고객이 선택한 최고의 인기 상품</p>
+			</div>
+			<div id="m1_cont">
+				<ul>
+					<li>
+						<p><img src="./sample.png" alt="#" title="#"/></p>
+						<p><a href="#">민속국악사 해금</a></p>
+					</li>
+					<li>
+						<p><img src="./sample.png" alt="#" title="#"/></p>
+						<p><a href="#">민속국악사 해금</a></p>
+					</li>
+					<li>
+						<p><img src="./sample.png" alt="#" title="#"/></p>
+						<p><a href="#">민속국악사 해금</a></p>
+					</li>
+					<li>
+						<p><img src="./sample.png" alt="#" title="#"/></p>
+						<p><a href="#">민속국악사 해금</a></p>
+					</li>
+					<li>
+						<p><img src="./sample.png" alt="#" title="#"/></p>
+						<p><a href="#">민속국악사 해금</a></p>
+					</li>
+					<li>
+						<p><img src="./sample.png" alt="#" title="#"/></p>
+						<p><a href="#">민속국악사 해금</a></p>
+					</li>
+					<li>
+						<p><img src="./sample.png" alt="#" title="#"/></p>
+						<p><a href="#">민속국악사 해금</a></p>
+					</li>
+					<li>
+						<p><img src="./sample.png" alt="#" title="#"/></p>
+						<p><a href="#">민속국악사 해금</a></p>
+					</li>
+				</ul>
+				<button class="m1Btn" type="button" title="전체상품보기">전체상품보기</button>
+			</div>
+		</div>
+	</div>
+	
+	<!-- 민속국악사 둘러보기 -->
+	<div id="m2_wrap">
+		<div id="m2">
+			<div id="m2_header">
+				<p class="boardMtit">민속국악사 둘러보기</p>
+				<p class="boardStit">저희 민속국악사에서 한국 전통의 소리를 찾아 가세요</p>
+			</div>
+			<div id="m2_cont">
+				
+				<!-- 1. 조대석 장인 -->
+				<div id="m2_cont_1">
+					<img src="{% static 'shop/assets/m2_cont_1.png' %}" alt="조대석 장인"/>
+					<div>
+						<p><span>조대석</span>장인</p>
+						안녕하십니까?<br />
+						민속국악사 대표 조대석입니다.<br />
+						우리 소리와 우리 전통을 보급하기 위해<br />
+						항상 정성을 다하겠습니다.<br />
+						<button class="m2Btn" type="button" title="자세히보기">자세히보기</button>
+					</div>
+				</div>
+				
+				<!-- 2. 민속국악사 개포점 -->
+				<div id="m2_cont_2">
+					<div>
+						<p><span>민속국악사 개포점</span></p>
+						저희 민속국악사는 강남구<br />
+						개포동에 위치해 있습니다.<br />
+						국악중, 국악고에서 가까운 거리에<br />
+						위치하고 있습니다.<br />
+						<button class="m2Btn" type="button" title="자세히보기">자세히보기</button>
+					</div>
+					<img src="{% static 'shop/assets/m2_cont_2.png' %}" alt="민속국악사 개포점"/>
+				</div>
+				
+				<!-- 3. 민속국악사 제품 -->
+				<div id="m2_cont_3">
+					<img src="{% static 'shop/assets/m2_cont_3.png' %}" alt="민속국악사 제품"/>
+					<div>
+						<p><span>민속국악사 제품</span></p>
+						안녕하세요 민속국악사<br />
+						대표 홍길동입니다.<br />
+						우리소리 우리전통을 보급하기 위해<br />
+						정성을 다하겠습니다.<br />
+						<button class="m2Btn" type="button" title="자세히보기">자세히보기</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	
+	<!-- 민속국악사 찾아오시는 길 -->
+	<div id="m4_wrap">
+		<div id="m4">
+			<div id="m4_header">
+				<p class="boardMtit">민속국악사 찾아오시는 길</p>
+				<p class="boardStit">우리의 전통을 보급하고 정성을 다하겠습니다.</p>
+			</div>
+			<div id="m4_cont">
+				<img src="{% static 'shop/assets/map.png' %}" alt="오시는 길"/>
+			</div>
+		</div>
+	</div>
 {% endblock %}
