--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -18,10 +18,9 @@
 			<!-- 메인 메뉴 -->
 			<nav id="gnb_m">
 				<ul>
-					<li><a href="#" title="민속국악사">민속국악사</a></li>
-					<li><a href="#" title="제품구매">제품구매</a></li>
+					<li><a href="{% url 'shop:info' %}" title="민속국악사">민속국악사</a></li>
+					<li><a href="{% url 'shop:product' %}" title="제품구매">제품구매</a></li>
 					<li><a href="#" title="오시는 길">오시는 길</a></li>
-					<li><a href="#" title="커뮤니티">커뮤니티</a></li>
 				</ul>
 			</nav>
 			
