edit_model & admin page

--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -25,13 +25,10 @@
 					{% for product in object_list %}
 						<li><p><img src="{{ product.image.url }}"></p></li>
 						<li><p>{{ product.name }}</p></li>
+						{{ product.image.url }}
 					{% empty %}
 						<li><p>비었다</p></li>
 					{% endfor %}
-					<li>
-						<p><img src="./sample.png" alt="#" title="#"/></p>
-						<p><a href="#">민속국악사 해금</a></p>
-					</li>
 				</ul>
 				<button class="m1Btn" type="button" title="전체상품보기">전체상품보기</button>
 			</div>
