edit_model & admin page

--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -23,12 +23,17 @@
 			<div id="m1_cont">
 				<ul>
 					{% for product in object_list %}
-						<li><p><img src="{{ product.image.url }}"></p></li>
-						<li><p>{{ product.name }}</p></li>
-						{{ product.image.url }}
+						<li>
+							<p><img src="{{ product.image.url }}"></p>
+							<p>{{ product.name }}</p>
+						</li>
 					{% empty %}
 						<li><p>비었다</p></li>
 					{% endfor %}
+					<li>
+						<p><img src="./sample.png" alt="#" title="#"/></p>
+						<p><a href="#">민속국악사 해금</a></p>
+					</li>
 				</ul>
 				<button class="m1Btn" type="button" title="전체상품보기">전체상품보기</button>
 			</div>
