--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -28,9 +28,9 @@
 			<nav id="gnb_s">
 				<ul>
                     {% if user.is_active %}
-                    <li><a href="{% url 'shop:profile' %}">마이 페이지</a></li>
+                    <li><a href="{% url 'shop:profile' %}">마이 페이지</a><span>|</span></li>
                     <li><a href="#" title="장바구니">장바구니</a><span>|</span></li>
-                    <li><a href="{% url 'logout' %}">로그아웃</a></li>
+                    <li><a href="{% url 'logout' %}">로그아웃</a><span>|</span></li>
                     {% else %}
 					<li><a href="{% url 'login' %}" title="로그인">로그인</a><span>|</span></li>
                     {% endif %}
