--- a/shop/templates/shop/profile.html
+++ b/shop/templates/shop/profile.html
@@ -7,6 +7,9 @@
         {% for profile in profile_list %}
             <p>이름 : {{ profile.fullname }} </p>
             <p>연락처 : {{ profile.phone }}</p>
+            <p>주소 : {{ profile.address }}</p>
+            <p>상세 주소 : {{ profile.address_detail }}</p>
+            <!-- <a href="{% url 'shop:profile_edit' %}">프로필 수정하기</a> -->
 
         {% endfor %}
     {% else %}
