--- a/shop/templates/shop/profile_create.html
+++ b/shop/templates/shop/profile_create.html
@@ -1,16 +1,74 @@
 {% extends 'shop/base.html' %}
-
+{% load static %}
 {% block content %}
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/login.css' %}">
 
-
-
-
-<form method="post" action="{% url 'shop:profile_create' %}">
-{% csrf_token %}
-{{ form.as_p }}
-<button type="submit">프로필 저장</button>
-</form>
-
+<script language="javascript">
+        // opener관련 오류가 발생하는 경우 아래 주석을 해지하고, 사용자의 도메인정보를 입력합니다. ("팝업API 호출 소스"도 동일하게 적용시켜야 합니다.)
+    //document.domain = "abc.go.kr";
+    
+    function goPopup(){
+        // 호출된 페이지(jusopopup.jsp)에서 실제 주소검색URL(http://www.juso.go.kr/addrlink/addrLinkUrl.do)를 호출하게 됩니다.
+        var pop = window.open("/popup/address","pop","width=570,height=420, scrollbars=yes, resizable=yes"); 
+        
+        // 모바일 웹인 경우, 호출된 페이지(jusopopup.jsp)에서 실제 주소검색URL(http://www.juso.go.kr/addrlink/addrMobileLinkUrl.do)를 호출하게 됩니다.
+        //var pop = window.open("/popup/jusoPopup.jsp","pop","scrollbars=yes, resizable=yes"); 
+    }
+    /** API 서비스 제공항목 확대 (2017.02) **/
+    function jusoCallBack(roadFullAddr,roadAddrPart1,addrDetail,roadAddrPart2,engAddr, jibunAddr, zipNo, admCd, rnMgtSn, bdMgtSn
+                            , detBdNmList, bdNm, bdKdcd, siNm, sggNm, emdNm, liNm, rn, udrtYn, buldMnnm, buldSlno, mtYn, lnbrMnnm, lnbrSlno, emdNo){
+        // 팝업페이지에서 주소입력한 정보를 받아서, 현 페이지에 정보를 등록합니다.
+        document.form.roadAddrPart1.value = roadAddrPart1;
+        document.form.roadAddrPart2.value = roadAddrPart2;
+        document.form.addrDetail.value = addrDetail;
+        document.form.zipNo.value = zipNo;
+    }
+</script>
+<div id="login_wrap">
+        <div id="login">
+                <form method="post" action="{% url 'shop:profile_create' %}">
+                <div id="inputBox">
+                    {% csrf_token %}
+                    {{ form.non_field_errors }}
+                    <label for="{{ form.fullname.id_for_label }}">이름</label>
+                    {{ form.fullname }}
+                    <label for="{{ form.phone.id_for_label }}">연락처</label>
+                    {{ form.phone }}
+                    <label for="{{ form.address.id_for_label }}">주소</label>
+                    {{ form.address }}
+                    <label for="{{ form.address_detail.id_for_label }}">상세 주소</label>
+                    {{ form.address_detail }}
+                    
+                    <!-- <tbody>
+                        <tr>
+                            <th>이름</th>
+                            <td>
+                                <input type="text" id="name" name="name" style="width:100%">
+                            </td>
+                        </tr><br>
+                        <tr>
+                            <th>연락처</th>
+                            <td>
+                                <input type="text" id="phone" name="phone" style="width:100%">
+                            </td>
+                        </tr>   <br>    
+    
+                        <tr>
+                            <th><label>도로명주소</label></th>
+                            <td><input type="text" id="address" style="width:100%"></td>
+                        </tr>
+                        <tr>
+                            <th>상세주소</th>
+                                <td>
+                                    <input type="text" id="address_detail" style="width:100%" value="">
+                                </td>
+                        </tr>
+                    </tbody> -->
+                </div>
+                    <input type="submit" id="submitBtn" value="프로필 저장" />
+        </form>
+    </div>
+</div>
 
 
 {% endblock %}
