--- a/shop/templates/shop/product_list.html
+++ b/shop/templates/shop/product_list.html
@@ -42,7 +42,7 @@
 			
 		<ul>
 			{% for product in object_list %}
-                <a href="{% url 'shop:detail' product.product_id %}">
+                <a href="{% url 'shop:product' product.product_id %}">
                 <li>
                     <p><img src="{{ product.main_img.url }}"></p>
                     <p>{{ product.name }}</p>
