--- a/shop/templates/shop/product_list.html
+++ b/shop/templates/shop/product_list.html
@@ -11,7 +11,7 @@
 <!-- 서브페이지 타이틀 -->
     <div id="subPageTitle_wrap">
 		<p id="subPageTitle">
-			민속국악사 / 제품구매 / 가야금
+			민속국악사 / 제품구매 
 		</p>
 	</div>
 	
@@ -23,12 +23,12 @@
 		<div id="subPageMenu">
 			<div>민속국악사 악기 분류</div>
 			<ul>
-				<a href="{% url 'shop:category' 'Ga' }"><li><p>가야금</p><p>7</p></li></a>
-				<a href="{% url 'shop:category' 'Gu' }"><li><p>거문고</p><p>3</p></li></a>
-				<a href="{% url 'shop:category' 'Ah' }"><li><p>아쟁</p><p>2</p></li></a>
-				<a href="{% url 'shop:category' 'Hae' }"><li><p>해금</p><p>3</p></li></a>
-				<a href="{% url 'shop:category' 'Dae' }"><li><p>대금</p><p>1</p></li></a>
-				<a href="{% url 'shop:category' 'etc' }"><li><p>소품류</p><p>19</p></li></a>
+				<a href="{% url 'shop:category' 'Ga' %}"><li><p>가야금</p><p>7</p></li></a>
+				<a href="{% url 'shop:category' 'Gu' %}"><li><p>거문고</p><p>3</p></li></a>
+				<a href="{% url 'shop:category' 'Ah' %}"><li><p>아쟁</p><p>2</p></li></a>
+				<a href="{% url 'shop:category' 'Hae' %}"><li><p>해금</p><p>3</p></li></a>
+				<a href="{% url 'shop:category' 'Dae' %}"><li><p>대금</p><p>1</p></li></a>
+				<a href="{% url 'shop:category' 'etc' %}"><li><p>소품류</p><p>19</p></li></a>
 			</ul>
 			<ul>
 				<a href="#"><li><p>베스트셀러</p><p>10</p></li></a>
