--- a/shop/static/shop/css/home.css
+++ b/shop/static/shop/css/home.css
@@ -39,7 +39,7 @@ ul,li{list-style:none;}
 #header_wrap #header #gnb_m a:hover {color: #e3cd73;}
 
 /* banner */
-#banner_wrap {float: left; width: 100%; background: url(banner1.png) no-repeat center; -webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;}
+#banner_wrap {float: left; width: 100%; background: url(../assets/banner1.png) no-repeat center; -webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;}
 #banner_wrap #banner {width: 1200px; height: 600px; margin: 0 auto;}
 #banner_wrap #btnL {float: right; width: 62px; height: 62px; margin-top: 500px;}
 #banner_wrap #btnR {float: right; width: 62px; height: 62px; margin-top: 500px;}
