--- a/shop/templates/shop/profile_edit.html
+++ b/shop/templates/shop/profile_edit.html
@@ -1,7 +1,12 @@
 {% extends 'shop/base.html' %}
 {% load static %}
 {% block content %}
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/product.css' %}">
 <link rel= "stylesheet" type="text/css" href="{% static 'shop/css/login.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/intro.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/home.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/productD.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/mypage.css' %}">
 
 
 <div id="login_wrap">
