--- a/shop/templates/shop/order_list.html
+++ b/shop/templates/shop/order_list.html
@@ -23,34 +23,36 @@
 		<div id="product">
 			
 		<ul>
-			{% for order in object_list %}
-                <li>
-                    <p> 주문번호 : {{ order.order_id }} </p>
-                    <p> 주문자명 :  {{ order.fullname }} </p>
-                    <p> 연락처 :  {{ order.phone }} </p>
-                    <p> 주소 :  {{ order.address }} </p>
-                    <p> 상세 주소 : {{ order.address_detail }}</p>
-                    <p> 총 액 : {{ order.total }}</p>
-                    <p> 주문 상태 :
-                        {% if order.status == '0' %}
-                            결제 대기
-                        {% elif order.status == '1' %}
-                            결제 완료
-                        {% elif order.status == '2' %}
-                            상품 준비중
-                        {% elif order.status == '3' %}
-                            배송 중
-                        {% elif order.status == '4' %}
-                            배송 완료
-                        {% elif order.status == '5' %}
-                            구매 완료
-                        {% endif %}
-                    </p>
-                    <a href="#">취소 요청</a>
-                </li>
-            {% empty %}
-                <li><p>비었다</p></li>
-            {% endfor %}
+            {% if object_list %}
+                {% for order in object_list %}
+                    <li>
+                        <p> 주문번호 : {{ order.order_id }} </p>
+                        <p> 주문자명 :  {{ order.fullname }} </p>
+                        <p> 연락처 :  {{ order.phone }} </p>
+                        <p> 주소 :  {{ order.address }} </p>
+                        <p> 상세 주소 : {{ order.address_detail }}</p>
+                        <p> 총 액 : {{ order.total }}</p>
+                        <p> 주문 상태 :
+                            {% if order.status == '0' %}
+                                결제 대기
+                            {% elif order.status == '1' %}
+                                결제 완료
+                            {% elif order.status == '2' %}
+                                상품 준비중
+                            {% elif order.status == '3' %}
+                                배송 중
+                            {% elif order.status == '4' %}
+                                배송 완료
+                            {% elif order.status == '5' %}
+                                구매 완료
+                            {% endif %}
+                        </p>
+                        <a href="#">취소 요청</a>
+                    </li>
+                {% empty %}
+                    <li><p>비었다</p></li>
+                {% endfor %}
+            {% endif %}
 		</ul>
 			
 		</div>
