--- a/shop/templates/shop/order_list.html
+++ b/shop/templates/shop/order_list.html
@@ -19,44 +19,41 @@
 	<div id="subPageContents">
 
 	<!-- 상품 리스트 -->
-	<div id="product_wrap">
-		<div id="product">
-			
-		<ul>
-            {% if object_list %}
-                {% for order in object_list %}
-                    <li>
-                        <p> 주문번호 : {{ order.order_id }} </p>
-                        <p> 주문자명 :  {{ order.fullname }} </p>
-                        <p> 연락처 :  {{ order.phone }} </p>
-                        <p> 주소 :  {{ order.address }} </p>
-                        <p> 상세 주소 : {{ order.address_detail }}</p>
-                        <p> 총 액 : {{ order.total }}</p>
-                        <p> 주문 상태 :
-                            {% if order.status == '0' %}
-                                결제 대기
-                            {% elif order.status == '1' %}
-                                결제 완료
-                            {% elif order.status == '2' %}
-                                상품 준비중
-                            {% elif order.status == '3' %}
-                                배송 중
-                            {% elif order.status == '4' %}
-                                배송 완료
-                            {% elif order.status == '5' %}
-                                구매 완료
-                            {% endif %}
-                        </p>
-                        <a href="#">취소 요청</a>
-                    </li>
-                {% empty %}
-                    <li><p>비었다</p></li>
-                {% endfor %}
-            {% endif %}
-		</ul>
-			
-		</div>
-	</div>
+			<div id="mypageTab_1" name="mypageTab_1">
+<table>
+	<tr>
+		<th>주문날짜/주문번호</th>
+		<th>제품명</th>
+		<th>가격/수량</th>
+		<th>총합</th>
+		<th>주문/배송상태</th>
+	</tr>
+        {% for order in object_list %}
+    <tr>
+        <td><p>{{ order.order_date }}</p><p>{{ order.order_id }}</p></td>
+        <td>상품사진상품명</td>
+        <td><p>가격</p><p>수량</p></td>
+        <td><p>{{ order.total }}</p></td>
+        <td><p>
+                {% if order.status == '0' %}
+                    결제 대기
+                {% elif order.status == '1' %}
+                    결제 완료
+                {% elif order.status == '2' %}
+                    상품 준비중
+                {% elif order.status == '3' %}
+                    배송 중
+                {% elif order.status == '4' %}
+                    배송 완료
+                {% elif order.status == '5' %}
+                    구매 완료
+                {% endif %}
+        </p></td>
+        </tr>
+            {% empty %}
+                <li><p>비었다</p></li>
+            {% endfor %}
+    </table>
 		
 		</div>
     </div>
