--- a/shop/templates/shop/order_list.html
+++ b/shop/templates/shop/order_list.html
@@ -3,10 +3,12 @@
 {% block content %}
 
 {% load static %}
-
 <link rel= "stylesheet" type="text/css" href="{% static 'shop/css/product.css' %}">
 <link rel= "stylesheet" type="text/css" href="{% static 'shop/css/login.css' %}">
 <link rel= "stylesheet" type="text/css" href="{% static 'shop/css/intro.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/home.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/productD.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/mypage.css' %}">
 
 <!-- 서브페이지 타이틀 -->
     <div id="subPageTitle_wrap">
