--- a/shop/templates/registration/login.html
+++ b/shop/templates/registration/login.html
@@ -29,7 +29,8 @@
           </div>      
         </form>
 
-  <a href="{% url 'shop:signup' %}">회원가입하기</a>
+  <a href="{% url 'shop:signup' %}">회원가입하기</a><span>|</span>
+  <a href="{% url 'shop:findPW' %}">비밀번호 찾기</a>
 
       {% endif %} 
 		<!-- <form name="loginForm" action="#" method="post">
